update PR points
